--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -36,39 +36,38 @@
     {
       "cell_type": "code",
       "source": [
-        "s = \"Hi there Sam!\"\n",
-        "a = s.split()\n",
-        "a"
+        "s = \"Hi there Sam!\""
       ],
       "metadata": {
-        "id": "s07c7JK7Oqt-",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "56b55e5d-786f-44bc-e6a1-798da6ef4224"
+        "id": "s07c7JK7Oqt-"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Hi', 'there', 'Sam!']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ]
+      "execution_count": 21,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "s = \"Hi there Sam!\"\n",
+        "a = s.split()\n",
+        "print(a)"
+      ],
       "metadata": {
-        "id": "6mGVa3SQYLkb"
+        "id": "6mGVa3SQYLkb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "914c2f16-2f7a-4275-ab30-0a6a2ea97652"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Hi', 'there', 'Sam!']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -85,28 +84,13 @@
       "cell_type": "code",
       "source": [
         "planet = \"Earth\"\n",
-        "diameter = 12742\n",
-        "\n",
-        "print (\"The diameter of\", planet,\"is\",diameter,\"Kilometers\" )\n",
-        "\n"
+        "diameter = 12742"
       ],
       "metadata": {
-        "id": "_ZHoml3kPqic",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9410e30c-9d21-40c4-a887-1998303fdd01"
+        "id": "_ZHoml3kPqic"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The diameter of Earth is 12742 Kilometers\n"
-          ]
-        }
-      ]
+      "execution_count": 12,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -146,18 +130,29 @@
     {
       "cell_type": "code",
       "source": [
+        "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}\n"
+      ],
+      "metadata": {
+        "id": "fcVwbCc1QrQI"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}\n",
         "d['k1'][3]['tricky'][3]['target'][3]"
       ],
       "metadata": {
-        "id": "fcVwbCc1QrQI",
+        "id": "MvbkMZpXYRaw",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "92ee54dc-bfc9-409b-c5d4-9a349dd3cb7b"
+        "outputId": "b8c2e3a1-3f28-4e6b-a420-1ebc81bdc9f9"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -170,18 +165,9 @@
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 14
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "MvbkMZpXYRaw"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -195,28 +181,13 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "a1=np.zeros(10)\n",
-        "a2=np.ones(10)*5\n",
-        "print(a1 , a2)"
+        "import numpy as np"
       ],
       "metadata": {
-        "id": "LLiE_TYrhA1O",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b2005925-ad10-4186-dc95-f63d24aa14e5"
+        "id": "LLiE_TYrhA1O"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] [5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n"
-          ]
-        }
-      ]
+      "execution_count": 15,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -233,7 +204,7 @@
       "source": [
         "import numpy as np\n",
         "a=np.zeros(10)\n",
-        "a"
+        "print(a)"
       ],
       "metadata": {
         "id": "NHrirmgCYXvU",
@@ -261,7 +232,7 @@
       "source": [
         "import numpy as np\n",
         "a=np.ones(10)*5\n",
-        "a"
+        "print(a)"
       ],
       "metadata": {
         "id": "e4005lsTYXxx",
@@ -297,27 +268,27 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "a=np.arange(20,36)\n",
-        "a"
+        "a=np.arange(20,36,3)\n",
+        "print(a)"
       ],
       "metadata": {
         "id": "oAI2tbU2Yag-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d37c38ec-a69e-4d82-8a79-52ee54f05bf4"
+        "outputId": "499bd95a-a334-4fb8-ca3f-258d57b3ad0c"
       },
-      "execution_count": 2,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35])"
+              "array([20, 23, 26, 29, 32, 35])"
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 16
         }
       ]
     },
@@ -335,16 +306,16 @@
       "source": [
         "import numpy as np\n",
         "a=np.arange(0,9).reshape((3,3))\n",
-        "a"
+        "print(a)"
       ],
       "metadata": {
         "id": "tOlEVH7BYceE",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b305198d-59e7-4cb2-ad97-c773c2ee3f98"
+        "outputId": "38c7cd38-1ba7-4dd9-d9e9-e6a2bd125349"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -356,7 +327,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 18
         }
       ]
     },
@@ -376,8 +347,8 @@
         "import numpy as np\n",
         "a=np.array([1,2,3])\n",
         "b=np.array([4,5,6])\n",
-        "c= np.concatenate((a,b))\n",
-        "print(c) "
+        "a1= np.concatenate((a,b))\n",
+        "print(a1) "
       ],
       "metadata": {
         "id": "rAPSw97aYfE0",
@@ -433,7 +404,7 @@
         "import numpy \n",
         "a = numpy.random.randint(10, size=(3,2))\n",
         "a1 = pandas.DataFrame(a)\n",
-        "a1\n"
+        "print(a1)\n"
       ],
       "metadata": {
         "id": "xNpI_XXoYhs0",
@@ -597,7 +568,7 @@
         "import pandas\n",
         "import numpy\n",
         "a = pandas.date_range(start='1-1-2023', end='10-2-2023',freq='D')\n",
-        "a"
+        "print(a)"
       ],
       "metadata": {
         "id": "dgyC0JhVYl4F",
@@ -657,156 +628,26 @@
         "import pandas as pd\n",
         "lists = [[1, 'aaa', 22], [2, 'bbb', 25], [3, 'ccc', 24]]\n",
         "a = pd.DataFrame(lists)\n",
-        "a\n"
+        "print(a)\n"
       ],
       "metadata": {
         "id": "knH76sDKYsVX",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 143
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "19847edd-218f-4943-bb89-cb7eaed622fb"
+        "outputId": "cfe36e5e-4a49-4b58-c115-ed25745dfc27"
       },
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "   0    1   2\n",
-              "0  1  aaa  22\n",
-              "1  2  bbb  25\n",
-              "2  3  ccc  24"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-ec2622b2-6289-4d02-9064-3c2e1c9d6812\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>0</th>\n",
-              "      <th>1</th>\n",
-              "      <th>2</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>aaa</td>\n",
-              "      <td>22</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2</td>\n",
-              "      <td>bbb</td>\n",
-              "      <td>25</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>3</td>\n",
-              "      <td>ccc</td>\n",
-              "      <td>24</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ec2622b2-6289-4d02-9064-3c2e1c9d6812')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-ec2622b2-6289-4d02-9064-3c2e1c9d6812 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ec2622b2-6289-4d02-9064-3c2e1c9d6812');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   0    1   2\n",
+            "0  1  aaa  22\n",
+            "1  2  bbb  25\n",
+            "2  3  ccc  24\n"
+          ]
         }
       ]
     }
